//
// Copyright 2023 DXOS.org
//

syntax = "proto3";

package dxos.agent.search;

message SearchRequest {
  enum Type {
    EXACT = 0;
    FUZZY = 1;
  }

  string query = 1;
  Type type = 2;
}

message SearchResponse {
  message Result {
    string spaceKey = 1;
    string objectId = 2;
    float score = 3;

    message Match {
      string term = 1;
    }

    repeated Match matches = 4;
  }

  repeated Result results = 1;
}
